Landing page text uplift

--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@ subnav:
     <p class="section-text">
       Australian registered psychologist, AI consultant, and board-approved
       supervisor with extensive experience in speaking engagements and thought
-      leadership in the intersection of artificial intelligence and mental
-      health care. Since early 2023, David has been at the forefront of AI
-      integration in clinical practice, helping clinicians navigate the evolving
-      landscape of responsible AI adoption in therapeutic settings.
+      leadership in artificial intelligence for clinicians especially focused on psychology and mental
+      health care. Since early 2023, David has been pioneering discussions around AI use
+      in clinical practice, helping clinicians navigate responsible AI adoption in therapeutic settings.
     </p>
     <p class="section-text muted">
       As Director of Psychology Squared, David has built a thriving community of
-      over 3,500 clinicians learning to use AI in therapy. His expertise spans
-      training with major organizations including the Australian Psychological
-      Society (APS), Australian Association of Psychologists Inc. (AAPi), and
+      over 3,500 clinicians learning to use AI in therapy 
+      <a href="https://www.facebook.com/groups/austpsychai" target="_blank" style="text-decoration: underline;">on Facebook</a>. 
+      He has presented for the Australian Psychological Society (APS), Australian Association of Psychologists Inc. (AAPi), and
       Australian Clinical Psychology Association (ACPA).
     </p>
 
@@ -74,8 +73,7 @@ subnav:
           <span class="card-icon">&#128101;</span>
         </div>
         <p class="card-text">
-          Director of thriving community with 3,500+ clinicians learning AI
-          integration
+          Runs Facebook community with 3,500+ clinicians learning to use and keep up with changes in AI
         </p>
       </article>
       <article class="card">
@@ -84,8 +82,7 @@ subnav:
           <span class="card-icon">&#128214;</span>
         </div>
         <p class="card-text">
-          Extensive demo events with Heidi, BastionGPT, Everbility, and many
-          more AI solutions
+          David has run demo events with Heidi, BastionGPT, Everbility, and Zanda
         </p>
       </article>
     </div>
@@ -148,19 +145,12 @@ subnav:
           <div class="event-item">
             <h4 class="event-title">AI for Social Workers</h4>
             <p class="event-desc">
-              Tailored training for social work professionals
+              Use of AI for social work professionals
             </p>
           </div>
           <div class="event-item">
             <h4 class="event-title">Social Media & AI for Psychologists</h4>
-            <p class="event-desc">Leveraging AI for professional outreach</p>
-          </div>
-          <div class="event-item">
-            <h4 class="event-title">AI Tool Demonstrations</h4>
-            <p class="event-desc">
-              Live demo events featuring Heidi, BastionGPT, Everbility, and many
-              more AI solutions
-            </p>
+            <p class="event-desc">Using AI tools to build a social media presence</p>
           </div>
         </div>
       </article>
@@ -174,10 +164,6 @@ subnav:
     <h2 class="section-title">
       Media and <span class="section-title-accent">Interviews</span>
     </h2>
-    <p class="section-subtitle">
-      Featured insights on AI in psychology across podcasts and industry
-      publications
-    </p>
 
     <div class="two-col-grid">
       <article class="card">
@@ -233,7 +219,7 @@ subnav:
       Our <span class="section-title-accent">Services</span>
     </h2>
     <p class="section-subtitle">
-      Comprehensive AI integration solutions for mental health professionals
+      AI discussion for mental health professionals
     </p>
 
     <div class="cards-grid four-col">
@@ -246,9 +232,9 @@ subnav:
           One-on-one guidance for AI implementation in your practice
         </p>
         <ul class="card-list">
-          <li>• Personalized AI strategy</li>
-          <li>• Risk assessment</li>
-          <li>• Implementation planning</li>
+          <li>• Understand your clinic</li>
+          <li>• Explore range of AI uses</li>
+          <li>• Explore ethical AI issues</li>
         </ul>
       </article>
       <article class="card">
@@ -272,7 +258,8 @@ subnav:
         <ul class="card-list">
           <li>• Conference keynotes</li>
           <li>• Professional development</li>
-          <li>• Industry insights</li>
+          <li>• Ethics</li>
+          <li>• New AI tools and interesting uses</li>
         </ul>
       </article>
       <article class="card">
@@ -282,9 +269,10 @@ subnav:
         </div>
         <p class="card-text">Essential resources for responsible AI use</p>
         <ul class="card-list">
-          <li>• Regulatory guidance</li>
-          <li>• Documentation templates</li>
-          <li>• Risk management tools</li>
+          <li>• AI policy</li>
+          <li>• Privacy policy</li>
+          <li>• Consent form</li>
+          <li>• Guidance around AI transcript and audio as part of AI scribe use</li>
         </ul>
       </article>
     </div>
@@ -342,9 +330,9 @@ subnav:
           </div>
           <div class="row-between row-divider gap-2">
             <span class="fs-11 text-secondary"
-              >Duo consultation (2 people)</span
+              >Two person consultation</span
             >
-            <span class="price">$330 (Inc GST)</span>
+            <span class="price">$330/hr (Inc GST)</span>
           </div>
           <div class="row-between gap-2">
             <span class="fs-11 text-secondary">Larger groups</span>
@@ -380,7 +368,7 @@ subnav:
     <div class="flex gap-2">
       <div class="card card-alt">
         <div>
-          <h4 class="text-gold fs-13 mb-1 center">Product Review</h4>
+          <h4 class="text-gold fs-13 mb-1 center">Product Review<br> (Private, not for public distribution)</h4>
           <div class="center mb-15">
             <span class="price-lg">$770</span>
             <p class="subtitle-muted">(Inc GST)</p>
@@ -396,7 +384,7 @@ subnav:
               <span class="text-gold">✓</span> 1-month follow-up
             </li>
             <li class="flex items-center gap-05">
-              <span class="text-gold">✓</span> Written recommendations
+              <span class="text-gold">✓</span> Written recommendations (Private)
             </li>
           </ul>
         </div>
@@ -419,24 +407,18 @@ subnav:
           </div>
           <ul class="text-muted list-unstyled mb-15">
             <li class="flex items-center gap-05 mb-075">
-              <span class="text-gold">✓</span> Assessment and planning
+              <span class="text-gold">✓</span> Initial meeting and planning
             </li>
             <li class="flex items-center gap-05 mb-075">
-              <span class="text-gold">✓</span> Implementation support
+              <span class="text-gold">✓</span> Regular reviews
             </li>
             <li class="flex items-center gap-05 mb-075">
-              <span class="text-gold">✓</span> Regular reviews and optimization
-            </li>
-            <li class="flex items-center gap-05 mb-075">
-              <span class="text-gold">✓</span> AI governance and compliance
+              <span class="text-gold">✓</span> Focus on features
             </li>
             <li class="flex items-center gap-05">
-              <span class="text-gold">✓</span> Risk management guidance
+              <span class="text-gold">✓</span> Focus on reaching target clinicians
             </li>
           </ul>
-          <p class="text-muted fs-09 mb-15 center italic">
-            Prior discussion required to ensure suitability
-          </p>
         </div>
         <div class="center">
           <button
