--- a/contact/index.html
+++ b/contact/index.html
@@ -57,12 +57,9 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
     Send <span class="section-title-accent">a Message</span>
   </h2>
   <div class="btn-group">
-    <button
-      class="btn"
-      onclick="window.open('https://psychologysquared.com', '_blank')"
-    >
+    <a href="https://www.facebook.com/groups/austpsychai" target="_blank" class="btn">
       <span style="margin-right: 0.5rem">&#128101;</span> Join 3,500+ Clinicians
-    </button>
+    </a>
   </div>
 
   <div class="two-col-grid">
