--- a/faq/index.html
+++ b/faq/index.html
@@ -20,8 +20,8 @@ subnav:
 <!-- Header -->
 <header class="title-container">
   <div class="title-content title-content-centered">
-    <h1 class="main-title main-title-accent">
-      Frequently Asked <span class="main-title">Questions</span>
+    <h1 class="main-title">
+      Frequently Asked Questions
     </h1>
     <p class="main-subtitle">
       Straightforward answers about our services, ethics, compliance, and
