Booking and contact form uplift

--- a/contact/index.html
+++ b/contact/index.html
@@ -15,15 +15,12 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
   </div>
 </header>
 
-<button onclick="openBookingForm()" class="hero-cta mb-2">
-  <span>BOOK NOW</span>
-  <small class="hero-cta-subtitle">Transform Your Practice</small>
-</button>
+
 
 <!-- Consultancy Booking -->
-<section id="consultancy" class="section gap-2 bg2">
+<!-- <section id="consultancy" class="section gap-2 bg2">
   <h2 class="section-title">
-    Book <span class="section-title-accent">a Consultancy</span>
+    Book <span class="section-title-accent">Now</span>
   </h2>
     <div class="card">
       <iframe
@@ -49,18 +46,17 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         style="pointer-events: auto; height: 364px"
       ></iframe>
     </div>
-</section>
+</section> -->
 
 <!-- Contact Section -->
 <section id="contact" class="section bg3">
-  <h2 class="section-title">
+  <button onclick="openBookingForm()" class="hero-cta mb-2">
+    <span>BOOK NOW</span>
+    <small class="hero-cta-subtitle">Transform Your Practice</small>
+  </button>
+  <!-- <h2 class="section-title">
     Send <span class="section-title-accent">a Message</span>
-  </h2>
-  <div class="btn-group">
-    <a href="https://www.facebook.com/groups/austpsychai" target="_blank" class="btn">
-      <span style="margin-right: 0.5rem">&#128101;</span> Join 3,500+ Clinicians
-    </a>
-  </div>
+  </h2> -->
 
   <div class="two-col-grid">
     <div>
@@ -107,22 +103,27 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
             >Individual and group consultations available</span
           >
         </div>
+        <h4 class="card-title" style="margin-top: 2.5rem; margin-bottom: 1.5rem; text-align: left">
+          Follow Our Work
+        </h4>
+        <div style="display: flex; gap: 1rem; flex-wrap: wrap; flex-direction: column; max-width: fit-content;">
+        <a href="https://www.facebook.com/groups/austpsychai" target="_blank" class="btn" style="padding-left: 2rem; padding-right: 2rem;">
+          <span>&#128101;</span> Join 3,500+ Clinicians
+        </a>
+        <a href="https://www.linkedin.com/in/davidlopis/" target="_blank" class="btn" style="padding-left: 2rem; padding-right: 2rem;">
+          <span>in</span> LinkedIn
+        </a>
+        </div>
       </div>
 
-      <h4 class="card-title" style="margin-bottom: 1rem; text-align: left">
-        Follow Our Work
-      </h4>
-      <div style="display: flex; gap: 1rem; flex-wrap: wrap">
-        <button
-          class="btn"
-          onclick="window.open('https://www.linkedin.com/in/davidlopis/', '_blank')"
-        >
-          <span style="margin-right: 0.5rem">in</span> LinkedIn
-        </button>
+      <div style="display: flex; gap: 1rem; flex-wrap: wrap; flex-direction: column;">
+
+
+     
         <!-- <button class="btn" onclick="window.open('https://twitter.com/davidlopis', '_blank')">
                         <span style="margin-right: 0.5rem;">&#120143;</span> Twitter
                     </button> -->
-      </div>
+                  </div>
     </div>
 
     <div class="card">
