--- a/contact/index.html
+++ b/contact/index.html
@@ -192,7 +192,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         >
           Send Message
         </button>
-        <p id="email-status" class="email-status"></p>
+        <p id="email-status-contact" class="email-status"></p>
       </form>
     </div>
   </div>
