--- a/contact/index.html
+++ b/contact/index.html
@@ -128,11 +128,11 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
 
     <div class="card">
       <!-- <h3 class="card-title" style="margin-bottom: 1.5rem;">Send a Message</h3> -->
-      <form id="form">
+      <form id="form-contact">
         <div class="form-group">
           <label class="form-label">Name *</label>
           <input
-            id="name"
+            id="name-contact"
             type="text"
             name="name"
             required
@@ -144,7 +144,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         <div class="form-group">
           <label class="form-label">Email *</label>
           <input
-            id="email"
+            id="email-contact"
             type="email"
             name="email"
             required
@@ -156,7 +156,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         <div class="form-group">
           <label class="form-label">Organization *</label>
           <input
-            id="organization"
+            id="organization-contact"
             type="text"
             name="organization"
             class="form-input"
@@ -167,7 +167,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         <div class="form-group">
           <label class="form-label">Message *</label>
           <textarea
-            id="message"
+            id="message-contact"
             name="message"
             required
             class="form-textarea"
@@ -178,7 +178,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
         <input
           type="text"
           name="website"
-          id="website"
+          id="website-contact"
           class="hp-field"
           autocomplete="off"
           tabindex="-1"
