chore/profile-image-no-background-and-hero-image-style-removed

--- a/index.html
+++ b/index.html
@@ -14,26 +14,21 @@ subnav:
 ---
 
 <header id="home" class="title-container container-short">
-  <div class="container container-alt">
-    <div class="title-content">
-      <h1 class="main-title main-title-accent">
-        AI FOR<br />
-        <span class="main-title">CLINICIANS</span>
-      </h1>
-      <p class="main-subtitle">Building effective and responsible AI use</p>
-      <button onclick="openBookingForm()" class="hero-cta">
-        <span>BOOK NOW</span>
-        <small class="hero-cta-subtitle">Transform Your Practice</small>
-      </button>
-    </div>
-    <div class="hero-image">
-      <img
-        src="../assets/images/professionalHeadshot.png"
-        alt="David Lopis - AI Consultant"
-        class="hero-img"
-      />
-    </div>
+  <div class="title-content">
+    <h1 class="main-title main-title-accent">
+      AI FOR<br />
+      <span class="main-title">CLINICIANS</span>
+    </h1>
+    <p class="main-subtitle">Building effective and responsible AI use</p>
+    <button onclick="openBookingForm()" class="hero-cta">
+      <span>BOOK NOW</span>
+      <small class="hero-cta-subtitle">Transform Your Practice</small>
+    </button>
   </div>
+  <img
+    src="../assets/images/professionalHeadshot-no-background.png"
+    alt="David Lopis - AI Consultant"
+  />
 </header>
 <!-- About Section -->
 <section id="about" class="section bg1">
@@ -44,16 +39,22 @@ subnav:
     <p class="section-text">
       Australian registered psychologist, AI consultant, and board-approved
       supervisor with extensive experience in speaking engagements and thought
-      leadership in artificial intelligence for clinicians especially focused on psychology and mental
-      health care. Since early 2023, David has been pioneering discussions around AI use
-      in clinical practice, helping clinicians navigate responsible AI adoption in therapeutic settings.
+      leadership in artificial intelligence for clinicians especially focused on
+      psychology and mental health care. Since early 2023, David has been
+      pioneering discussions around AI use in clinical practice, helping
+      clinicians navigate responsible AI adoption in therapeutic settings.
     </p>
     <p class="section-text muted">
       As Director of Psychology Squared, David has built a thriving community of
-      over 3,500 clinicians learning to use AI in therapy 
-      <a href="https://www.facebook.com/groups/austpsychai" target="_blank" style="text-decoration: underline;">on Facebook</a>. 
-      He has presented for the Australian Psychological Society (APS), Australian Association of Psychologists Inc. (AAPi), and
-      Australian Clinical Psychology Association (ACPA).
+      over 3,500 clinicians learning to use AI in therapy
+      <a
+        href="https://www.facebook.com/groups/austpsychai"
+        target="_blank"
+        style="text-decoration: underline"
+        >on Facebook</a
+      >. He has presented for the Australian Psychological Society (APS),
+      Australian Association of Psychologists Inc. (AAPi), and Australian
+      Clinical Psychology Association (ACPA).
     </p>
 
     <div class="cards-grid">
@@ -73,7 +74,8 @@ subnav:
           <span class="card-icon">&#128101;</span>
         </div>
         <p class="card-text">
-          Runs Facebook community with 3,500+ clinicians learning to use and keep up with changes in AI
+          Runs Facebook community with 3,500+ clinicians learning to use and
+          keep up with changes in AI
         </p>
       </article>
       <article class="card">
@@ -82,7 +84,8 @@ subnav:
           <span class="card-icon">&#128214;</span>
         </div>
         <p class="card-text">
-          David has run demo events with Heidi, BastionGPT, Everbility, and Zanda
+          David has run demo events with Heidi, BastionGPT, Everbility, and
+          Zanda
         </p>
       </article>
     </div>
@@ -144,13 +147,13 @@ subnav:
           </div>
           <div class="event-item">
             <h4 class="event-title">AI for Social Workers</h4>
-            <p class="event-desc">
-              Use of AI for social work professionals
-            </p>
+            <p class="event-desc">Use of AI for social work professionals</p>
           </div>
           <div class="event-item">
             <h4 class="event-title">Social Media & AI for Psychologists</h4>
-            <p class="event-desc">Using AI tools to build a social media presence</p>
+            <p class="event-desc">
+              Using AI tools to build a social media presence
+            </p>
           </div>
         </div>
       </article>
@@ -272,7 +275,9 @@ subnav:
           <li>• AI policy</li>
           <li>• Privacy policy</li>
           <li>• Consent form</li>
-          <li>• Guidance around AI transcript and audio as part of AI scribe use</li>
+          <li>
+            • Guidance around AI transcript and audio as part of AI scribe use
+          </li>
         </ul>
       </article>
     </div>
@@ -329,9 +334,7 @@ subnav:
             <span class="price">$220/hr (Inc GST)</span>
           </div>
           <div class="row-between row-divider gap-2">
-            <span class="fs-11 text-secondary"
-              >Two person consultation</span
-            >
+            <span class="fs-11 text-secondary">Two person consultation</span>
             <span class="price">$330/hr (Inc GST)</span>
           </div>
           <div class="row-between gap-2">
@@ -368,7 +371,10 @@ subnav:
     <div class="flex gap-2">
       <div class="card card-alt">
         <div>
-          <h4 class="text-gold fs-13 mb-1 center">Product Review<br> (Private, not for public distribution)</h4>
+          <h4 class="text-gold fs-13 mb-1 center">
+            Product Review<br />
+            (Private, not for public distribution)
+          </h4>
           <div class="center mb-15">
             <span class="price-lg">$770</span>
             <p class="subtitle-muted">(Inc GST)</p>
@@ -416,7 +422,8 @@ subnav:
               <span class="text-gold">✓</span> Focus on features
             </li>
             <li class="flex items-center gap-05">
-              <span class="text-gold">✓</span> Focus on reaching target clinicians
+              <span class="text-gold">✓</span> Focus on reaching target
+              clinicians
             </li>
           </ul>
         </div>
@@ -432,4 +439,3 @@ subnav:
     </div>
   </article>
 </section>
-
